--- a/share/man/man5/src.conf.5
+++ b/share/man/man5/src.conf.5
@@ -170,10 +170,6 @@ Set to not build or install
 associated utilities, and examples.
 .Pp
 This option only affects amd64/amd64.
-<<<<<<< HEAD
-.It Va WITHOUT_BIND_NOW
-Do not build all binaries with the
-=======
 .It Va WITH_BHYVE_SNAPSHOT
 Set to include support for save and restore (snapshots) in
 .Xr bhyve 8
@@ -181,9 +177,8 @@ and
 .Xr bhyvectl 8 .
 .Pp
 This option only affects amd64/amd64.
-.It Va WITH_BIND_NOW
-Build all binaries with the
->>>>>>> freebsd/master
+.It Va WITHOUT_BIND_NOW
+Do not build all binaries with the
 .Dv DF_BIND_NOW
 flag set.
 Run-time relocation processing will be performed on demand.
@@ -201,11 +196,7 @@ Build and install GNU
 as part of the normal system build.
 .Pp
 This is a default setting on
-<<<<<<< HEAD
-amd64/amd64, arm/armv6, arm/armv7, mips/mips, mips/mips64, powerpc/powerpc and powerpc/powerpc64.
-=======
-amd64/amd64 and i386/i386.
->>>>>>> freebsd/master
+amd64/amd64.
 .It Va WITHOUT_BINUTILS_BOOTSTRAP
 Do not build GNU binutils
 as part of the bootstrap process.
