--- a/share/man/man5/src.conf.5
+++ b/share/man/man5/src.conf.5
@@ -1304,11 +1304,7 @@ arm/armv6, arm/armv7, mips/mips, mips/mips64 and powerpc/powerpc.
 Build LLVM's OpenMP runtime.
 .Pp
 This is a default setting on
-<<<<<<< HEAD
-amd64/amd64, arm64/aarch64 and powerpc/powerpc64.
-=======
-amd64/amd64, arm64/aarch64, i386/i386, powerpc/powerpc64, riscv/riscv64 and riscv/riscv64sf.
->>>>>>> origin/freebsd/current/main
+amd64/amd64, arm64/aarch64, powerpc/powerpc64, riscv/riscv64 and riscv/riscv64sf.
 .It Va WITHOUT_OPENSSH
 Do not build OpenSSH.
 .It Va WITHOUT_OPENSSL
